# DLFeat

./: .buildinfo  DLFeat.py  LICENSE  README.md  genindex.html  getting_started.html  index.html  model_zoo.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg
.doctrees/: getting_started.doctree  index.doctree  model_zoo.doctree
.github/workflows/: publish-docs.yml
_modules/: DLFeat.html  index.html
_modules/sklearn/utils/: _metadata_requests.html
_sources/: getting_started.md.txt  index.rst.txt  model_zoo.rst.txt
dlfeat/: __init__.py  dlfeat_lib.py
docs/docs/source/: conf.py
docs/docs/source/docs/source/docs/: Makefile
docs/source/: getting_started.md  index.rst
notebooks/: CIFAR10-Example.ipynb  register_model.ipynb
