[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"
# backend-path = ["."] # <-- This line has been removed/commented out

[project]
name = "dlfeat"
version = "0.5.0" # Ensure this matches __version__ in your library

description = "A Python library for easy and modular deep learning feature extraction from various data modalities."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["feature extraction", "deep learning", "pytorch", "image", "video", "audio", "text", "multimodal", "computer vision", "nlp"]
authors = [
  { name = "Antonino Furnari", email = "antonino.furnari@unict.it" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "torchaudio>=0.9.0",
    "scikit-learn>=0.24.0",
    "Pillow>=8.0.0",
    "numpy>=1.19.0",
    "scipy>=1.5.0",
    "transformers>=4.20.0", 
    "sentence-transformers>=2.0.0",
    "timm>=0.4.12",
    "requests>=2.25.0"
]

[project.urls]
Homepage = "https://github.com/antoninofurnari/dlfeat"
Documentation = "https://antoninofurnari.github.io/dlfeat/" 
Repository = "https://github.com/antoninofurnari/dlfeat"
"Bug Tracker" = "https://github.com/antoninofurnari/dlfeat/issues"
