[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"
# backend-path = ["."] # Removed as per previous fix

[project]
name = "dlfeat"
version = "0.5.0" 
description = "A Python library for easy and modular deep learning feature extraction from various data modalities."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["feature extraction", "deep learning", "pytorch", "image", "video", "audio", "text", "multimodal", "computer vision", "nlp"]
authors = [
  { name = "Antonino Furnari", email = "antonino.furnari@unict.it" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License", 
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Core dependencies needed for DLFeatExtractor base functionality
dependencies = [
    "torch>=1.9.0",
    "numpy>=1.19.0",
    "scikit-learn>=0.24.0" 
]

[project.optional-dependencies]
# For image models/processing
image = [
    "Pillow>=8.0.0",
    "torchvision>=0.10.0", # For torchvision image models & video reading
    "timm>=0.4.12"         # For TIMM image models
]
# For video models (torchvision also provides video reading capabilities)
video = [
    "torchvision>=0.10.0" 
]
# For audio models/processing
audio = [
    "torchaudio>=0.9.0",
    "scipy>=1.5.0"         # For dummy audio in tests, some torchaudio backends
]
# For models from Hugging Face Transformers (covers various modalities)
transformers = [
    "transformers>=4.20.0" # Adjust version as needed for specific models
]
# For SentenceTransformer text models
sentence_transformers = [
    "sentence-transformers>=2.0.0"
]
# For downloading sample video in self-tests
test_utils = [
    "requests>=2.25.0"
]
# Group for all optional features
all = [
    "dlfeat[image]",
    "dlfeat[video]", # torchvision is already in image, but keeping for clarity
    "dlfeat[audio]",
    "dlfeat[transformers]",
    "dlfeat[sentence_transformers]",
    "dlfeat[test_utils]"
]
# You could also create more specific groups like:
# all_image = ["dlfeat[image]", "dlfeat[transformers]"] # if DINOv2 is considered an image model

[project.urls]
Homepage = "https://github.com/antoninofurnari/dlfeat"
Documentation = "https://antoninofurnari.github.io/dlfeat/" 
Repository = "https://github.com/antoninofurnari/dlfeat"
"Bug Tracker" = "https://github.com/antoninofurnari/dlfeat/issues"
