[metadata]
# Most metadata is now in pyproject.toml
# For PyPI description:
long_description = file: README.md
long_description_content_type = text/markdown

[options]
# Explicitly list your package(s) to avoid discovery issues
packages = dlfeat
# python_requires and install_requires are primarily read from pyproject.toml by modern setuptools
# install_requires = # Dependencies are now in pyproject.toml

# If you were using find:, you would configure it like this to only include 'dlfeat':
# [options.packages.find]
# where = .
# include = dlfeat, dlfeat.* # exclude = tests*, docs* # Example exclusions if they existed at root and were packages
